<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn0"
        android:textSize="@dimen/fontsize"
        app:layout_constraintStart_toEndOf="@+id/resetbtn"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/resetbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:backgroundTint="@color/resetBtnColor"
        android:fontFamily="@string/fontfamily"
        android:text="@string/resetBtn"
        android:textSize="@dimen/fontsize"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/dotBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dotBtnColor"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btnDot"
        android:textSize="@dimen/fontsize"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn1"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operLayout" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn2"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn3"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/plusEquLayout"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn4"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn5"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn6"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/plusEquLayout"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn7"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn8"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/asd" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontfamily"
        android:text="@string/btn9"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <LinearLayout
        android:id="@+id/plusEquLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/dotBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button1">

        <Button
            android:id="@+id/plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:backgroundTint="@color/defaultColor"
            android:fontFamily="@string/fontfamily"
            android:text="@string/plsbtn"
            android:textSize="@dimen/fontsize" />

        <Button
            android:id="@+id/equ_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/defaultColor"
            android:fontFamily="@string/fontfamily"
            android:text="@string/equbtn"
            android:textSize="@dimen/fontsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/plusEquLayout"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@+id/resultView">

        <Button
            android:id="@+id/splitbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/operColor"
            android:fontFamily="@string/fontfamily"
            android:text="@string/splitbtn"
            android:textSize="@dimen/fontsize" />

        <Button
            android:id="@+id/minusbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/operColor"
            android:fontFamily="@string/fontfamily"
            android:text="@string/minusbtn"
            android:textSize="@dimen/fontsize" />

        <Button
            android:id="@+id/multibtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/operColor"
            android:fontFamily="@string/fontfamily"
            android:text="@string/multbtn"
            android:textSize="@dimen/fontsize" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/defaultColor"
        android:fontFamily="@string/fontfamily"
        android:textSize="@dimen/fontsize"
        android:textAlignment="textEnd"
        android:text="@string/default_value"
        app:layout_constraintBottom_toTopOf="@+id/operLayout"
        app:layout_constraintEnd_toEndOf="@+id/operLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/operLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/historyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>