<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/defaultButtonLandStyle">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn6"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/operLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dotBtn"
        style="@style/dotStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetbtn"
        style="@style/resetStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:insetRight="@dimen/default_rightInset"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn0"
        app:layout_constraintStart_toEndOf="@+id/resetbtn"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/operLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn1"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn9"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn4"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <LinearLayout
        android:id="@+id/plusEquLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:theme="@style/plusStyle"
        app:layout_constraintBottom_toBottomOf="@+id/dotBtn"
        app:layout_constraintEnd_toEndOf="@+id/operLayout"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:insetRight="@dimen/default_rightInset"
            android:text="@string/plsbtn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/operLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/operStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/splitbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetRight="@dimen/default_rightInset"
            android:text="@string/splitbtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minusbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetRight="@dimen/default_rightInset"
            android:text="@string/minusbtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multibtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetRight="@dimen/default_rightInset"
            android:text="@string/multbtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equ_button"
            style="@style/plusStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetRight="@dimen/default_rightInset"
            android:text="@string/equbtn" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn8"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="@dimen/default_rightInset"
        android:text="@string/btn7"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <!-- <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/asd" />-->

    <TextView
        android:id="@+id/resultView"
        style="@style/resultLandViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/historyView"
        style="@style/historyViewStyle"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/operLayout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>